deploy/base/openehr-nodes/vitala/portal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vitala-portal
  namespace: dh-health
  labels:
    app: vitala-portal
    ehr-node-name: vitala
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vitala-portal
  template:
    metadata:
      labels:
        app: vitala-portal
    spec:
      containers:
      - name: vitala-portal
        image: registry.prod.dh.unimaas.nl/docker-health/portal:latest
        ports:
        - containerPort: 3000
