deploy/base/openehr-nodes/vitala/portal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vitala-portal-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: portal.vitala.env.dh.unimaas.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vitala-portal
            port:
              number: 3000
